Fixes #133 by aligning icons for buttons and a

--- a/src/packages/ids-button/ids-button.css
+++ b/src/packages/ids-button/ids-button.css
@@ -13,7 +13,12 @@
   font-size: var(--font-size-base);
   -webkit-font-smoothing: antialiased;
   font-weight: var(--font-weight-bold);
-  padding: var(--button-padding-y) var(--button-padding-x);
+  height: var(--button-height);
+  line-height: 1;
+  padding-bottom: calc((var(--button-height) - var(--font-size-base)) / 2);
+  padding-left: var(--button-padding-x);
+  padding-right: var(--button-padding-x);
+  padding-top: calc((var(--button-height) - var(--font-size-base)) / 2);
   text-align: center;
   text-decoration: none;
   text-transform: capitalize;
@@ -34,6 +39,10 @@
 
   &:hover {
     text-decoration: none;
+  }
+
+  & .ids-icon {
+    vertical-align: top;
   }
 
   &.ids-btn--default {
@@ -110,10 +119,4 @@
     display: block;
     width: 100%;
   }
-}
-
-/* Adjust padding for <a> line height */
-a.ids-btn {
-  padding-bottom: calc(var(--button-padding-y) + 2);
-  padding-top: calc(var(--button-padding-y) + 2);
 }
